<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="@dimen/common_spacing">


    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/posts_avatar_size"
        android:layout_height="@dimen/posts_avatar_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/nMedia"
        tools:srcCompat="@sample/posts.json/data/authorAvatar"/>

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:maxLines="1"
        android:ellipsize="end"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="@sample/posts.json/data/published" />

    <ImageButton
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_menu"
        app:srcCompat="@drawable/ic_baseline_more_vert_24"/>

    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:autoLink="web"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        tools:text="@sample/posts.json/data/content"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar, published, menu" />

    <ImageButton
        android:id="@+id/like_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/common_spacing"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/ic_outline_favorite_border_24"
        android:contentDescription="@string/description_post_like" />

    <TextView
        android:id="@+id/likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@sample/posts.json/data/likes"
        app:layout_constraintStart_toEndOf="@id/like_button"
        app:layout_constraintTop_toBottomOf="@id/content"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginStart="@dimen/count_spacing" />

    <ImageButton
        android:id="@+id/share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/likes"
        app:layout_constraintTop_toBottomOf="@id/content"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginStart="@dimen/common_spacing"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/ic_baseline_share_24"
        android:contentDescription="@string/description_post_share" />

    <TextView
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@sample/posts.json/data/share"
        app:layout_constraintTop_toBottomOf="@id/content"
        app:layout_constraintStart_toEndOf="@id/share_button"
        android:layout_marginStart="@dimen/count_spacing"
        android:layout_marginTop="@dimen/common_spacing"/>

    <ImageButton
        android:id="@+id/view_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/views"
        app:layout_constraintTop_toBottomOf="@id/content"
        android:background="@android:color/transparent"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/count_spacing"
        app:srcCompat="@drawable/ic_baseline_remove_red_eye_24"
        android:contentDescription="@string/description_post_views" />

    <TextView
        android:id="@+id/views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@sample/posts.json/data/views"
        app:layout_constraintTop_toBottomOf="@id/content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/common_spacing" />

</androidx.constraintlayout.widget.ConstraintLayout>